# Desktop_Screen

./: .gitignore  Makefile  partitions.csv  sdkconfig  sdkconfig.old
application/: api.c  api.h  beep.c  beep.h
bsp/: http_request.c  http_request.h  https_request.c  https_request.h  js.c  js.h  myfont.c  myfont.h  sntp.c  sntp.h  spisffs.c  spisffs.h  tp.c  tp.h  uc8151d.c  uc8151d.h  wifi.c  wifi.h
components/lvgl/: CMakeLists.txt  component.mk  lvgl.mk
exmaple/: API接口调用示例.c  UI组件建立实例.c
main/: CMakeLists.txt  component.mk  main.c
spiffs/: login.html
ui/: algorithm.c  algorithm.h  page.c  page.h  ssqt.c  ssqt.h
